[gd_scene load_steps=6 format=2]

[ext_resource path="res://FarmArea1.gd" type="Script" id=1]
[ext_resource path="res://XPBar.gd" type="Script" id=2]
[ext_resource path="res://sci-fi-godot-theme/sci-fi-theme.tres" type="Theme" id=3]
[ext_resource path="res://XPPanel.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 302.125 )

[node name="FarmArea1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_right = 64.0
margin_bottom = 20.0
text = "Go Back"

[node name="collision_Wall" type="Area2D" parent="." groups=["player_collision_wall"]]
position = Vector2( 80, 297 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_Wall"]
position = Vector2( 1, 4.125 )
shape = SubResource( 6 )

[node name="SlimeEnemyTimer" type="Timer" parent="."]

[node name="XPBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -2.0
margin_right = -2.0
margin_bottom = 1.21283
size_flags_horizontal = 3
max_value = 19.0
step = 1.0
percent_visible = false
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -66.0
margin_right = 71.0
margin_bottom = -5.0
script = ExtResource( 4 )

[node name="XPLabel" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
text = "8"
align = 1
valign = 1

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="SlimeEnemyTimer" to="." method="_on_SlimeEnemyTimer_timeout"]
